force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Modified_Valence_Arousal_Stress__c.field-meta.xml
<CustomField>
    <fullName>aos_Modified_Valence_Arousal_Stress__c</fullName>
    <inlineHelpText>For Canines</inlineHelpText>
    <label>Modified Valence/Arousal/Stress Score C</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Accepts treats</fullName>
            </value>
            <value>
                <fullName>1 Appears curious</fullName>
            </value>
            <value>
                <fullName>1 Approaches with relaxed body/face</fullName>
            </value>
            <value>
                <fullName>1 Low wagging tail</fullName>
            </value>
            <value>
                <fullName>1 Solicits interactions when approached.</fullName>
            </value>
            <value>
                <fullName>1 Watches with relaxed body</fullName>
            </value>
            <value>
                <fullName>2 Jumping up</fullName>
            </value>
            <value>
                <fullName>2 Licking frantically</fullName>
            </value>
            <value>
                <fullName>2 Turning head</fullName>
            </value>
            <value>
                <fullName>2 Yawning</fullName>
            </value>
            <value>
                <fullName>3 Constant or intense vocalisation</fullName>
            </value>
            <value>
                <fullName>3 Growling/grumbling</fullName>
            </value>
            <value>
                <fullName>3 Pacing</fullName>
            </value>
            <value>
                <fullName>3 Panting</fullName>
            </value>
            <value>
                <fullName>3 Scratches at exits</fullName>
            </value>
            <value>
                <fullName>3 Searches for exit</fullName>
            </value>
            <value>
                <fullName>3 Wall bouncing</fullName>
            </value>
            <value>
                <fullName>4 Avoids</fullName>
            </value>
            <value>
                <fullName>4 Escape</fullName>
            </value>
            <value>
                <fullName>4 Hides</fullName>
            </value>
            <value>
                <fullName>4 Nipping or light mouthing</fullName>
            </value>
            <value>
                <fullName>4 Spinning or circling</fullName>
            </value>
            <value>
                <fullName>4 Startles</fullName>
            </value>
            <value>
                <fullName>4 Tail tucking</fullName>
            </value>
            <value>
                <fullName>4 Trembling</fullName>
            </value>
            <value>
                <fullName>4 Wire licking or biting</fullName>
            </value>
            <value>
                <fullName>5 Bites or attempts to bite</fullName>
            </value>
            <value>
                <fullName>5 Growling/snarling</fullName>
            </value>
            <value>
                <fullName>5 Hard mouthing</fullName>
            </value>
            <value>
                <fullName>5 Lunging with vocalisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>