force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Ocular_Discharge__c.field-meta.xml
<CustomField>
    <fullName>aos_Ocular_Discharge__c</fullName>
    <label>Ocular Discharge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Mucoid</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Blood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>