force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Oral_Fluids_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Oral_Fluids_Comments__c</fullName>
    <label>Oral Fluids Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>