force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_QAR__c.field-meta.xml
<CustomField>
    <fullName>aos_QAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QAR</label>
    <type>Checkbox</type>
</CustomField>