force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Retching__c.field-meta.xml
<CustomField>
    <fullName>aos_Retching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retching</label>
    <type>Checkbox</type>
</CustomField>