force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Secondary_Consult_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Secondary_Consult_Reason__c</fullName>
    <label>Secondary Consult Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>