force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Shedding__c.field-meta.xml
<CustomField>
    <fullName>aos_Shedding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shedding</label>
    <type>Checkbox</type>
</CustomField>