force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Sneezing__c.field-meta.xml
<CustomField>
    <fullName>aos_Sneezing__c</fullName>
    <label>Sneezing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S1</fullName>
            </value>
            <value>
                <fullName>S2</fullName>
            </value>
            <value>
                <fullName>S3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>