force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Temp_Min__c.field-meta.xml
<CustomField>
    <fullName>aos_Temp_Min__c</fullName>
    <label>Temp Min</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>