force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_VAS_Score__c.field-meta.xml
<CustomField>
    <fullName>aos_VAS_Score__c</fullName>
    <inlineHelpText>Considering your observations, choose a rating for the dog from 1 to 5 ONLY that best reflects the types of behaviours observed</inlineHelpText>
    <label>VAS Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>