force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Vet_Check__c.field-meta.xml
<CustomField>
    <fullName>aos_Vet_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vet Check</label>
    <type>Checkbox</type>
</CustomField>