force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Vomit__c.field-meta.xml
<CustomField>
    <fullName>aos_Vomit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vomit</label>
    <type>Checkbox</type>
</CustomField>