force-app/main/default/objects/animalos__Animal_Action__c/fields/aos_Wildlife_Faeces__c.field-meta.xml
<CustomField>
    <fullName>aos_Wildlife_Faeces__c</fullName>
    <label>Wildlife Faeces</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>++</fullName>
            </value>
            <value>
                <fullName>+++</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>