force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/animalos__Daily_Observation.recordType-meta.xml
<RecordType>
    <fullName>animalos__Daily_Observation</fullName>
    <active>true</active>
    <label>Daily Observation</label>
</RecordType>