force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/animalos__Enrichment.recordType-meta.xml
<RecordType>
    <fullName>animalos__Enrichment</fullName>
    <active>true</active>
    <label>Enrichment</label>
</RecordType>