force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/animalos__Exercise.recordType-meta.xml
<RecordType>
    <fullName>animalos__Exercise</fullName>
    <active>true</active>
    <label>Exercise</label>
</RecordType>