force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/animalos__Medicine.recordType-meta.xml
<RecordType>
    <fullName>animalos__Medicine</fullName>
    <active>true</active>
    <label>Medicine</label>
</RecordType>