force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/animalos__Nutrition.recordType-meta.xml
<RecordType>
    <fullName>animalos__Nutrition</fullName>
    <active>true</active>
    <label>Nutrition</label>
</RecordType>