force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/animalos__Treatment.recordType-meta.xml
<RecordType>
    <fullName>animalos__Treatment</fullName>
    <active>true</active>
    <label>Treatment</label>
</RecordType>