force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/animalos__Weigh_In.recordType-meta.xml
<RecordType>
    <fullName>animalos__Weigh_In</fullName>
    <active>true</active>
    <label>Weigh In</label>
</RecordType>