force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/aos_Appointment.recordType-meta.xml
<RecordType>
    <fullName>aos_Appointment</fullName>
    <active>true</active>
    <label>Appointment</label>
</RecordType>