force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/aos_FAS_Observations.recordType-meta.xml
<RecordType>
    <fullName>aos_FAS_Observations</fullName>
    <active>true</active>
    <label>FAS Observations</label>
</RecordType>