force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/aos_Feline_Toileting.recordType-meta.xml
<RecordType>
    <fullName>aos_Feline_Toileting</fullName>
    <active>true</active>
    <label>Feline Toileting</label>
</RecordType>