force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/aos_Feline_Toileting_Habits.recordType-meta.xml
<RecordType>
    <fullName>aos_Feline_Toileting_Habits</fullName>
    <active>true</active>
    <label>Feline Toileting Habits</label>
</RecordType>