force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/aos_Fluids.recordType-meta.xml
<RecordType>
    <fullName>aos_Fluids</fullName>
    <active>true</active>
    <label>Fluids</label>
</RecordType>