force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/aos_Interaction.recordType-meta.xml
<RecordType>
    <fullName>aos_Interaction</fullName>
    <active>true</active>
    <label>Interaction</label>
</RecordType>