force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/aos_Mammal_Daily_Record.recordType-meta.xml
<RecordType>
    <fullName>aos_Mammal_Daily_Record</fullName>
    <active>true</active>
    <label>Mammal Daily Record</label>
</RecordType>