force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/aos_Orphan_Bird_Feeding_Chart.recordType-meta.xml
<RecordType>
    <fullName>aos_Orphan_Bird_Feeding_Chart</fullName>
    <active>true</active>
    <label>Orphan Bird Feeding Chart</label>
</RecordType>