force-app/main/default/objects/animalos__Animal_Action__c/recordTypes/aos_Sanitation.recordType-meta.xml
<RecordType>
    <fullName>aos_Sanitation</fullName>
    <active>true</active>
    <description>Action used for sanitary purposes.</description>
    <label>Sanitation</label>
</RecordType>