force-app/main/default/objects/animalos__Animal_Action__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>animalos__Animal__c</columns>
    <columns>animalos__Action_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>